<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragments.MainFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/text_input_layout_hint"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusedByDefault="false"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkBinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_check_bin_text"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBinButton">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scheme_network_header_text" />

            <TextView
                android:id="@+id/schemeNetworkTextView"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="Visa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_header_text" />

            <TextView
                android:id="@+id/brandTextView"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="Visa/Dankort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number_header_text" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:text="@string/length_header_text" />

                    <TextView
                        android:id="@+id/cardNumberLengthTextView"
                        style="@style/TextAppearance.AppCompat.SearchResult.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="16" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.5"
                        android:scaleY="0.5"
                        android:text="@string/luhn_header_text" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/cardNumberLuhnYesTextView"
                            style="@style/TextAppearance.AppCompat.SearchResult.Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Yes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:scaleY="3"
                            android:text="@string/slash_text" />

                        <TextView
                            android:id="@+id/cardNumberLuhnNoTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No"
                            android:textSize="20sp" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_header_text" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/typeDebitTextView"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Debit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:scaleY="3"
                    android:text="@string/slash_text" />

                <TextView
                    android:id="@+id/typeCreditTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Credit"
                    android:textSize="20sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepaid_header_text" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prepaidYesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:scaleY="3"
                    android:text="@string/slash_text" />

                <TextView
                    android:id="@+id/prepaidNoTextView"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_header_text" />

            <TextView
                android:id="@+id/countryEmojiAndNameTextView"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="🇩🇰 Denmark"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/latitude__header_text" />

                <TextView
                    android:id="@+id/countryLatitudeTextView"
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="56"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/countryLongitudeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/longitude_header_text" />

                <TextView
                    style="@style/TextAppearance.AppCompat.SearchResult.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/closing_bracket" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_header_text" />

            <TextView
                android:id="@+id/bankNameAndCityTextView"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jyske Bank, Hjørring" />

            <TextView
                android:id="@+id/bankUrlTextView"
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="www.jyskebank.dk"
                android:textColor="@color/purple_700" />

            <TextView
                android:id="@+id/bankPhoneTextView"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+4589893300"
                android:textSize="15sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>